Trying to fix another iOS issue, jagged edges and overflow.

--- a/source/stylesheets/pages/_shared.sass
+++ b/source/stylesheets/pages/_shared.sass
@@ -2,6 +2,7 @@ body
   +custom-serif
 
   #container
+    width: 100%
     overflow: hidden
 
   #jump-to-nav
@@ -27,6 +28,7 @@ body
     width: 1024px
     margin: 0 auto
 
+  +respond-to(desktop)
     #container
       padding: 2em 0
       overflow: visible
