--- a/source/stylesheets/partials/_helpers.sass
+++ b/source/stylesheets/partials/_helpers.sass
@@ -72,6 +72,8 @@
   +text-shadow(0 1px 0 darken($color, 10%))
   -webkit-backface-visibility: hidden
   +transform(rotate(#{$rotation}))
+  -webkit-background-clip: padding-box
+  background-clip: padding-box
   @if $shadowed
     +shadowed
 
